--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "ownerNumber": ["94764497078@s.whatsapp.net","94764497078@s.whatsapp.net"],
-    "ownerName": "SANDARU",
-    "instagram" : "https://instagram.com/nicetry.zaa._",
-    "botName": "SANDARU MD ",
+    "ownerNumber": ["85255630022@s.whatsapp.net","94764497078@s.whatsapp.net"],
+    "ownerName": "Obbiz",
+    "instagram" : "https://instagram.com/_ahmad_obbii",
+    "botName": "Haruka-Md ",
     "footer": "api.zeeoneofc.xyz",
     "sessionName": "session",
     "fotoDonasi": "./qris.jpg",
@@ -10,7 +10,7 @@
     "BotKey": "VdFlEL76",
     "auto_welcomeMsg": true,
     "auto_leaveMsg": true,    
-    "autobio": false,
+    "autobio": true,
     "anticall": true,
     "autorespond": false,
     "autoblok212": true,
